# chess

./: .gitignore  Cargo.toml
src/: bitboard.rs  board.rs  evaluator.rs  hashing.rs  iter_deep.rs  kogge_stone.rs  lichess.rs  main.rs  movegen.rs  piece.rs  syzygy.rs
src/board/: evaluator.rs  pieces.rs
