[package]
name = "chess"
version = "1.0.0"
authors = ["Joba <jonas+git@joba.me>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
rand = "0.7.3"
console = "0.10.0"
clap = "4.3.11"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tokio-util = "0.6.3"
futures-util = "0.3.28"
serde = { version = "1.0.171", features = ["derive"] }
const-random = "0.1.15"
