[package]
name = "chess"
version = "1.0.0"
authors = ["Joba <jonas+git@joba.me>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
console = "0.10.0"
clap = { version = "4.3.15", features = ["cargo"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tokio-util = "0.6.3"
futures-util = "0.3.28"
serde = { version = "1.0.171", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"